# cr_nematic_structure

./: .gitignore  Cargo.toml  README.md  plotter.py  pyproject.toml  requirements.txt
.github/workflows/: CI.yml
cr_nematic_structure/: __init__.py  cr_nematic_structure.pyi  plotting.py  simulation.py
plots/: test.py
src/: lib.rs  simulation.rs
tests/: basic.py
