[package]
name = "cr_nematic_structure"
version = "0.1.0"
edition = "2021"
authors = ["Jonas Pleyer <jonas.pleyer@fdm.uni-freiburg.de>"]

[lib]
name = "cr_nematic_structure"
crate-type = ["cdylib", "rlib"]

doctest = false

[dependencies]
cellular_raza = { version = "0.4.0", features = ["approx", "pyo3"] }
# cudarc = { version = "0.17.3", features = ["cuda-12080"] }
env_logger = "0.11.8"
itertools = "0.14"
log = "0.4.28"
nalgebra = { version = "0.34", features = ["serde", "serde-serialize"] }
num = { version = "0.4.3", features = ["rand", "serde"] }
pyo3 = { version = "0.27", features = ["serde", "py-clone", "multiple-pymethods"] }
pyo3-stub-gen = "0.17.0"
rand = { version = "0.9", features = ["serde"] }
rand_chacha = { version = "0.9", features = ["serde"] }
rand_distr = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
short_default = "0.1.1"
spatial-decomposition = "0.2.2"
