[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "cr_nematic_structure"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "pyvista>=0.42",
    "numpy==2.2.6",
    "opencv-python",
    "tqdm>=4.60",
    "scikit-image>=0.24",
    "matplotlib",
]
[project.scripts]

[tool.maturin]
features = ["pyo3/extension-module"]
# python-source = "python"

[tool.ruff]
line-length = 100
